added loading animations to result views. reduced blocking code during data update for better gui performance under load. general gui optimization